fix: replace illegal ImmutableMap import with Map.of